se agrego al parte con sass

--- a/index.html
+++ b/index.html
@@ -4,9 +4,158 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="build/css/app.css">
-    <title>Document</title>
+    <title>Tienda</title>
 </head>
 <body>
-    <h1>HOLA MUNDO</h1>
+    <header class="header">
+        <a href="index.html">
+            <img class="logo" src="src/img/logo.png" alt="Logotipo">
+        </a>
+    </header>
+    <nav class="navegacion">
+        <a class="enlace activo" href="index.html">Tienda</a>
+        <a class="enlace" href="nosotros.html">Nosotros</a>
+        <a class="enlace" href="nosotros.html">Iniciar sesion</a>
+    </nav>
+    <main class="contenedor">
+        <h1>Nuestros productos</h1>
+        <div class="grid">
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/1.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">VueJS</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/2.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">AngularJS</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen"  src="src/img/3.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">ReactJS</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen"  class="imagen" src="src/img/4.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">Redux</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen"  class="imagen" src="src/img/5.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">NodeJS</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/6.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">SASS</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/7.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">Html5</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/8.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">Github</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/9.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">BulmaCSS</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/10.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">TypeScript</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/11.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">Drupal</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/12.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">JavaScript</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/13.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">GraphQL</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="producto.html">
+                    <img class="imagen" src="src/img/14.jpg" alt="Imagen camisa">
+                    <div class="informacion">
+                        <p class="nombre">Wordpress</p>
+                        <p class="precio">S/. 50</p>
+                    </div>
+                </a>
+            </div>
+            <div class="grafico camisas">
+
+            </div>
+            <div class="grafico node">
+                
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <p class="texto">Front End Store - Todos los derechos Reservador 2024.</p>
+    </footer>
 </body>
 </html>
