se creo el login y el register

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navegacion">
         <a class="enlace activo" href="index.html">Tienda</a>
         <a class="enlace" href="nosotros.html">Nosotros</a>
-        <a class="enlace" href="nosotros.html">Iniciar sesion</a>
+        <a class="enlace" href="login.html">Iniciar sesion</a>
     </nav>
     <main class="contenedor">
         <h1>Nuestros productos</h1>
