--- a/nosotros.html
+++ b/nosotros.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="build/css/app.css">
+    <title>Nosotros</title>
 </head>
 <body>
-    
+    <header class="header">
+        <a href="index.html">
+            <img class="logo" src="src/img/logo.png" alt="Logotipo">
+        </a>
+    </header>
+    <nav class="navegacion">
+        <a class="enlace activo" href="index.html">Tienda</a>
+        <a class="enlace" href="nosotros.html">Nosotros</a>
+        <a class="enlace" href="login.html">Iniciar sesion</a>
+    </nav>
 </body>
 </html>
