--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a class="enlace activo" href="index.html">Tienda</a>
         <a class="enlace" href="nosotros.html">Nosotros</a>
         <a class="enlace" href="login.html">Iniciar sesion</a>
+        <a class="enlace" href="noticias.html">Noticias</a>
     </nav>
     <main class="contenedor">
         <h1>Nuestros productos</h1>
