--- a/nosotros.html
+++ b/nosotros.html
@@ -3,19 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="build/css/app.css">
+    <link rel="stylesheet" href="build/css/layout/nosotros.css">
     <title>Nosotros</title>
 </head>
 <body>
-    <header class="header">
-        <a href="index.html">
-            <img class="logo" src="src/img/logo.png" alt="Logotipo">
-        </a>
-    </header>
-    <nav class="navegacion">
-        <a class="enlace activo" href="index.html">Tienda</a>
-        <a class="enlace" href="nosotros.html">Nosotros</a>
-        <a class="enlace" href="login.html">Iniciar sesion</a>
-    </nav>
+    <main class="main-nosotros">
+        <div class="container">
+            <div class="box box1 text-box">
+                <h2>¿Quienes Somos?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipi
+                    sicing elit. Quia expedita optio error ratione 
+                    repudiandae, deserunt esse corporis explicabo 
+                    corrupti vel excepturi itaque et mollitia cupi
+                    ditate, reprehenderit id repellendus modi harum?
+                </p>
+                <a href="#" class="btn-nosotros">Mas de nosotros</a>
+            </div>
+            <div class="box box2 image-box">
+                <img src="src/img/pexels-markusspiske-360591.jpg" alt="Imagen">
+            </div>
+            <div class="box box3 image-text-box">
+                <img src="src/img/pexels-hiteshchoudhary-879109.jpg" alt="Imagen">
+            </div>
+            <div class="box box4 text-box">
+                <h2>Cursos Online</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipi
+                    sicing elit. Quia expedita optio error ratione 
+                    repudiandae, deserunt esse corporis explicabo 
+                    corrupti vel excepturi itaque et mollitia cupi
+                    ditate, reprehenderit id repellendus modi harum?
+                </p>
+                <a href="#" class="btn-nosotros">Ver Cursos</a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
